--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <h> Andrea Agius </h>
+        <img src="https://github.com/hackclub/dinosaurs/raw/master/smart_dinosaur_docs.png">
     </body>
 </html>
  
